--- a/p5langtons_ant/index.html
+++ b/p5langtons_ant/index.html
@@ -2,10 +2,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Langton's ant</title>
-  <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
+
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+   <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.min.js"></script>
   <script language="javascript" type="text/javascript" src="p5langtons_ant.js"></script>
-  <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
   <!-- This line removes any default padding and style. 
        You might only need one of these values set. -->
