--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <meta charset="UTF-8">
   <title>Langton's ant</title>
 
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+  <script language="javascript" type="text/javascript" src="./p5langtons_ant/libraries/p5.js"></script>
    <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.min.js"></script>
-  <script language="javascript" type="text/javascript" src="p5langtons_ant.js"></script>
+  <script language="javascript" type="text/javascript" src="./p5langtons_ant/p5langtons_ant.js"></script>
 
   <!-- This line removes any default padding and style. 
        You might only need one of these values set. -->
@@ -13,9 +13,9 @@
 </head>
 
 <body style="width:100%; text-align:center">
-  <h3>
+  <h1>
     Langton's Ant
-  </h3>
+  </h1>
   <div id="sketch">
   </div>
 </body>
